# dependentspy

./: .gitignore  LICENSE  README.md  dependency_graph.py  dependentspy-test.gv  pyproject.toml  requirements.txt  setup.py  test.py
dependentspy/: __init__.py  dependentspy.py  main.py  module.py  utils.py  visualization.py
drafts/: dependency_graph.ipynb
