[tool.poetry]
name = "dependencygraph"
version = "0.1.0"
description = ""
authors = ["rhensen <mail@raimund-hensen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.3"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
